['department
SyntaxError: compile error
/home/heroku_rack/lib/console.rb:150: syntax error, unexpected '=', expecting ')'
...rse.find(:first, :conditions = = ? AND number = ?, Computer ...
                              ^
/home/heroku_rack/lib/console.rb:150: syntax error, unexpected tCONSTANT, expecting $end
...= = ? AND number = ?, Computer Science, 169])
                              ^
	/home/heroku_rack/lib/console.rb:150
	/home/heroku_rack/lib/console.rb:150:in `call'
	/home/app/cda99474-45fd-43fa-ac9b-787444593567/.gems/gems/actionmailer-2.3.8/lib/action_mailer/vendor/tmail-1.2.7/tmail/utils.rb:351
	/usr/ruby1.8.7/lib/ruby/1.8/monitor.rb:242:in `synchronize'
